WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146140
cancelPreviousPerformRequestsWithTarget for -resolveBounds in wrong class.
https://bugs.webkit.org/show_bug.cgi?id=146140
Summary
cancelPreviousPerformRequestsWithTarget for -resolveBounds in wrong class.
Jeremy Jones
Reported
2015-06-18 22:40:35 PDT
cancelPreviousPerformRequestsWithTarget for -resolveBounds in wrong class.
Attachments
Patch
(1.93 KB, patch)
2015-06-18 22:42 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2015-06-18 22:41:13 PDT
rdar://problem/21455974
Jeremy Jones
Comment 2
2015-06-18 22:42:23 PDT
Created
attachment 255174
[details]
Patch
WebKit Commit Bot
Comment 3
2015-06-19 10:39:08 PDT
Comment on
attachment 255174
[details]
Patch Clearing flags on attachment: 255174 Committed
r185754
: <
http://trac.webkit.org/changeset/185754
>
WebKit Commit Bot
Comment 4
2015-06-19 10:39:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug