cancelPreviousPerformRequestsWithTarget for -resolveBounds in wrong class. https://bugs.webkit.org/show_bug.cgi?id=146140

Patch by Jeremy Jones <jeremyj@apple.com> on 2015-06-19
Reviewed by Eric Carlson.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(-[WebCALayerHostWrapper dealloc]): Added.
(-[WebAVVideoLayer dealloc]): Deleted.

Canonical link: https://commits.webkit.org/164197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185754 268f45cc-cd09-0410-ab3c-d52691b4dbfc